# eufyhome

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  test_credentials.env.example
custom_components/eufy_clean/: __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  number.py  scene.py  select.py  sensor.py  services.yaml  strings.json  switch.py  vacuum.py
custom_components/eufy_clean/api/: __init__.py  controllers.py  eufy_api.py  proto_utils.py
docs/: assembly_csharp_analysis.md  device_data_points.md
scripts/: capture_all_topics.py  capture_path_data.py  decode_dps.py  decode_map_dps.py  find_map_api.py  query_map_list.py  test_eufy_clean.py  test_mqtt_map.py  test_scene_activate.py  test_scene_fields.py  try_cloud_map_api.py  try_tuya_api.py
